# EMP

EMP_Project/: .cproject  .project  CMakeLists.txt
EMP_Project/.metadata/: version.ini
EMP_Project/.metadata/.plugins/com.genuitec.eclipse.devstyle/: recent.json
EMP_Project/.metadata/.plugins/com.genuitec.eclipse.monitor/: myeclipse-usage.properties
EMP_Project/.metadata/.plugins/com.genuitec.eclipse.ui.common.platform/: color-definitions-fix.css
EMP_Project/.metadata/.plugins/org.eclipse.core.resources/.root/: 5.tree
EMP_Project/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
EMP_Project/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
EMP_Project/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
EMP_Project/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
EMP_Project/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/: segments_1
EMP_Project/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/: _0.cfe  _0.cfs  _0.si  segments_1
EMP_Project/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.mch-fv4dyf2_1902/: node.properties
EMP_Project/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
EMP_Project/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
EMP_Project/.svn/: wc.db
EMP_Project/install/Linux-arm/Debug/: run.sh  stop.sh
EMP_Project/install/Linux-arm/Debug/assembler/: AnalogInputs.asm  DigitalOutputs.asm  GpioRegister.asm  HardwareCtrl.asm  SpiCommunication.asm  TemperatureInputs.asm  TemperatureInputsDefines.asm
EMP_Project/install/Linux-arm/Debug/config/: AppConfig.xml  config.template.xml  defaultLog.conf  projectForXiBase.xml
EMP_Project/install/Linux-arm/Debug/doc/BaseTecDriver/html/: _analog_inputs_8h_source.html  (+170 more)
EMP_Project/install/Linux-arm/Debug/include/BeagleBoneResources/: BeagleBoneResourcesVersionInfo.h  GPIO.h  HardWareDriver.h  SPIBus.h  SPIDevice.h  UartInterface.h
EMP_Project/install/Linux-arm/Debug/include/GaAppBaseLib/: GaAppBaseLib.h
EMP_Project/install/Linux-arm/Debug/include/GaGCppAPI/: GaGCppAPI.h
EMP_Project/install/Linux-arm/Debug/service/: GaApp.service
EMP_Project/source/BaseTecDriver/: CMakeLists.txt
EMP_Project/source/BaseTecDriver/assembler/: BaseTecDriver.asm  BaseTecDriverDefines.asm  DigitalInputs.asm  DigitalOutputsDefines.asm  HardwareCtrlDefines.asm  SpiCommunicationADS.asm  TemperatureInputsDefines.asm
EMP_Project/source/BaseTecDriver/include/: AnalogInputs.h  BaseTecDriver.h  CircularBuffer.h  DigitalInputs.h  DigitalOutputs.h  HardwareCtrl.h  TemperatureInputs.h  median.h
EMP_Project/source/BaseTecDriver/src/: AnalogInputs.cpp  BaseTecDriver.cpp  DigitalInputs.cpp  DigitalOutputs.cpp  HardwareCtrl.cpp  ModuleVersionInfo.template.cpp  TemperatureInputs.cpp  median.cpp
EMP_Project/source/BeagleBoneResources/: CMakeLists.txt
EMP_Project/source/BeagleBoneResources/include/: BeagleBoneResources.h
EMP_Project/source/BeagleBoneResources/src/: LibVersionInfo.template.cpp
EMP_Project/source/BeagleBoneResources/src/pru/: PruDriver.cpp  PruInterface.cpp
EMP_Project/source/EMP/include/: EMPModule.h
EMP_Project/source/EMP/src/: EMP  EMPMain.cpp  ModuleVersionInfo.template.cpp
EMP_Project/source/GaApp/: CMakeLists.txt
EMP_Project/source/GaApp/config/: AppConfig.xml  config.template.xml  config.xsd  gamma.xsd  project.xml  project.xsd  project_RR.xml
EMP_Project/source/GaApp/documentation/: GaApp.doxyfile
EMP_Project/source/GaApp/include/: AppConfig.h  AppVersionInfo.h
EMP_Project/source/GaApp/service/: install.sh
EMP_Project/source/GaApp/src/: AppConfig.cpp  AppVersionInfo.template.cpp  main.cpp
EMP_Project/source/GaAppBaseLib/: CMakeLists.txt
EMP_Project/source/GaAppBaseLib/documentation/: GaAppBaseLib.doxyfile
EMP_Project/source/GaAppBaseLib/include/ModuleInterface/: LibContainer.h  LibInstance.h  ModuleInterface.h
EMP_Project/source/GaAppBaseLib/include/exceptions/: ArgumentFaultException.h  ExceptionBase.h  LogicFaultException.h  SystemCallException.h
EMP_Project/source/GaAppBaseLib/include/log/: easylogging++.h
EMP_Project/source/GaAppBaseLib/include/network/: NetworkHelper.h  TCPClientConnection.h  UDPConnection.h
EMP_Project/source/GaAppBaseLib/src/: LibVersionInfo.template.cpp
EMP_Project/source/GaAppBaseLib/src/ModuleInterface/: LibContainer.cpp  LibInstance.cpp  ModuleInstance.cpp  ModuleInterface.cpp
EMP_Project/source/GaAppBaseLib/src/exceptions/: ArgumentFaultException.cpp  LogicFaultException.cpp  SystemCallException.cpp
EMP_Project/source/GaAppBaseLib/src/network/: NetworkHelper.cpp  UDPConnection.cpp
EMP_Project/source/GaGCppAPI/: CMakeLists.txt
EMP_Project/source/GaGCppAPI/.svn/: wc.db
EMP_Project/source/GaGCppAPI/include/common/: Event.h  EventHandler.h
EMP_Project/source/GaGCppAPI/include/pv/: SharedPV.h  TypedPV.h
EMP_Project/source/GaGCppAPI/include/scheduler/: GaTask.h
EMP_Project/source/GaGCppAPI/src/browsing/: Browser.cpp
EMP_Project/source/GaGCppAPI/src/common/: Event.cpp  EventHandler.cpp  GaService.cpp
EMP_Project/source/GaGCppAPI/src/exceptions/: GammaFaultException.cpp
EMP_Project/source/GaGCppAPI/src/pv/: RawPV.cpp  SharedPV.cpp
EMP_Project/source/HwAccessDemo/: CMakeLists.txt
EMP_Project/source/HwAccessDemo/documentation/: SeketonModule.doxyfile
EMP_Project/source/HwAccessDemo/include/: HwAccessModule.h  SkeletonModuleVersionInfo.h
EMP_Project/source/HwAccessDemo/src/: HwAccessModule.cpp
EMP_Project/source/KleberMqtt/include/: KleberMqtt.h  KleberMqttVersionInfo.h
EMP_Project/source/KleberMqtt/src/: KleberMqtt.cpp  ModuleVersionInfo.template.cpp
EMP_Project/source/PugiXML/: CMakeLists.txt
EMP_Project/source/PugiXML/.svn/: wc.db
EMP_Project/source/SkeletonModule/: CMakeLists.txt
EMP_Project/source/SkeletonModule/include/: SkeletonModule.h
EMP_Project/source/SkeletonModule/src/: SkeletonModule.cpp
(+1548 files in other folders)
